# tool-mcp-server

./: .cursorrules  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  HEADLESS-CODER-SMOKE-TEST.md  NEXT_STEPS_CLAUDE_CODE.md  README.md  agentic-ai-PROJECT.md  handoff.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
data/context/: company_structure.json  domain_inventory.json  pending_tasks.json  technology_decisions.json
data/demo/: company_structure.json  domain_inventory.json  pending_tasks.json  technology_decisions.json
docs/: BUILD_JOURNAL.md  CLI-ACCESS-REFERENCE.md  DB-SCHEMA-QUICK-REF.md  DEPLOYMENT-PLAYBOOK.md  SESSION-OPS.md  SETUP_SECOND_LAPTOP.md  TEAM-PROTOCOL.md
docs/plans/TASK-382/: PRD-382.md  plan-REQ-01.md  plan-REQ-02.md  plan-REQ-03.md  plan-REQ-04.md  plan-REQ-05.md
docs/plans/TASK-449/: PRD-449.md  plan-REQ-01.md  plan-REQ-02.md  plan-REQ-03.md  plan-REQ-04.md
docs/tasks-archive/DEV-505/: REQ-03.md
docs/tasks/DEV-505/: PRD-505.md  REQ-01.md  REQ-02.md
docs/tasks/DEV-676/: TEST-01.md
migrations/: dns_sentinel.sql
src/om_apex_mcp/: __init__.py  auth.py  cloudflare_client.py  cortex_supabase.py  http_server.py  miro_client.py  quorum_supabase.py  server.py  storage.py  supabase_client.py
src/om_apex_mcp/templates/: doc-header-footer.html
src/om_apex_mcp/tools/: __init__.py  ai_quorum.py  calendar.py  context.py  dns_sentinel.py  documents.py  handoff.py  helpers.py  incidents.py  miro.py  progress.py  tasks.py
supabase/: config.toml
supabase/migrations/: 20260203175842_add_document_templates_and_configs.sql  20260317_handoff_schema.sql
tests/: test_server.py
