[project]
name = "om-apex-mcp"
version = "0.1.0"
description = "MCP server for Om Apex Holdings - persistent memory across Claude interfaces"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Nishad Tambe", email = "nishad@omapex.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/om_apex_mcp"]

[project.scripts]
om-apex-mcp = "om_apex_mcp.server:main"
